--- a/css/main.css
+++ b/css/main.css
@@ -67,15 +67,15 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 
 /*네번째거 설명*/
 #content .con3 .tit:hover{border-bottom: 8px solid #0793CF}
-#content .con3 .desc_list > li .core{height:10px; background-color:#3a3d88;}
-#content .con3 .desc_list > li .point{ height:10px; background-color:#ff6061;}
-#content .con3 .desc_list > li .sub{ height:10px; background-color:#ffdc30;}
+#content .con3 .desc_list > li .core{height:10px; background-color:#313579;}
+#content .con3 .desc_list > li .point{ height:10px; background-color:#CC112C;}
+#content .con3 .desc_list > li .sub{ height:10px; background-color:#6AC3E7;}
 
 /*다섯번째거 설명*/
 #content .con4 .tit:hover{border-bottom: 8px solid #f6c8c8}
-#content .con4 .desc_list > li .core{height:10px; background-color:#f6c8c8;}
-#content .con4 .desc_list > li .point{ height:10px; background-color:#fae336;}
-#content .con4 .desc_list > li .sub{ height:10px; background-color:#9bd7d8;}
+#content .con4 .desc_list > li .core{height:10px; background-color:#3a3d88;}
+#content .con4 .desc_list > li .point{ height:10px; background-color:#ff6161;}
+#content .con4 .desc_list > li .sub{ height:10px; background-color:#ffdb30;}
 
 #sec2{height:100%;width:100%; background: #FFDF69;}
 #sec3{height:100%;width:100%; background: #73AEB9;}
