--- a/css/main.css
+++ b/css/main.css
@@ -83,3 +83,10 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 #sec3 .profile img{width:13%; padding-bottom: 20px;}
 #sec3 .profile .name{font-size:20px; padding-bottom: 5px; color:#fff;}
 #sec3 .profile > .desc{padding:5px;}
+
+
+
+/*미디어쿼리*/
+@media (max-width:1024px) {
+
+}
