--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 #header li.active a{color:#fff; border-bottom: 1px solid #4e4e4e;}
 
 .section{padding-left:10%; width:90%; height:100%; overflow: hidden;}
-#sec1{padding-left: :10%;text-align: center;background-color:#5E4B8B; color:#fff;}
+#sec1{padding-left:10%;text-align: center;background-color:#5E4B8B; color:#fff;}
 
 #sec1 .stit{text-align: center; font-size:100px;}
 #sec1 .skill{position: absolute; bottom:10%; left:10%; width:90%;font-size:0; border-top:1px solid #fff; padding-top:20px; }
@@ -88,5 +88,12 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 
 /*미디어쿼리*/
 @media (max-width:1024px) {
+  #sec2 .project_list li a{width:300px; height:300px;}
+  #content .con{padding-left:0; text-indent:10px;}
+  #content .con .desc_list > li{width:90%;}
+  #content .con{border:none;}
+  #content .con .desc_list > li{width:90%;}
+  #content .con .desc_list > li .stit{border-bottom:1px solid #999; padding-bottom:10px;}
+
 
 }
