--- a/css/main.css
+++ b/css/main.css
@@ -88,12 +88,17 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 
 /*미디어쿼리*/
 @media (max-width:1024px) {
+  #header{width:100px; height:100px;}
+  #header .logo{display:none;}
+  .skill{display:none;}
   #sec2 .project_list li a{width:300px; height:300px;}
   #content .con{padding-left:0; text-indent:10px;}
-  #content .con .desc_list > li{width:90%;}
+  #content .con .desc_list > li{width:90%; padding:20px 0;}
   #content .con{border:none;}
+  .color{padding-left:5%}
   #content .con .desc_list > li{width:90%;}
   #content .con .desc_list > li .stit{border-bottom:1px solid #999; padding-bottom:10px;}
-
+  #content .img img{    width: 150%;
+    transform: translateX(-20%);}
 
 }
