--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 @media (max-width:1024px) {
   #header{width:100%; height:80px; border-bottom:1px solid #4e4e4e;}
   #header .logo{display:none;}
-  .section{padding-left:0;}
+  .section{padding-left:0; width:100%}
   .skill{display:none;}
   #sec1{padding-left:0; background:#000;}
   #sec2{background:#efefef;}
