--- a/css/main.css
+++ b/css/main.css
@@ -88,8 +88,10 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 
 /*미디어쿼리*/
 @media (max-width:1024px) {
-  #header{width:100%; height:90px; border-bottom:1px solid #4e4e4e;}
+  #header{width:100%; border-bottom:1px solid #4e4e4e;}
   #header .logo{display:none;}
+  #header #myMenu{padding:10px 0;}
+  #myMenu li{float:left; width:33%; padding:0; text-align: center;}
   .section{padding-left:0; width:100%}
   .skill{display:none;}
   #sec1{padding-left:0; background:#000;}
