--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 
 /*미디어쿼리*/
 @media (max-width:1024px) {
-  #header{width:100%; border-bottom:1px solid #4e4e4e;}
+  #header{width:100%; height:40px; border-bottom:1px solid #4e4e4e;}
   #header .logo{display:none;}
   #header #myMenu{padding:10px 0;}
   #header #myMenu > li{float:left; width:33%; padding:0; text-align: center;}
