--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 #content .con{padding-left: 4%; padding-bottom:5%; color:#4e4e4e;font-size: 16px; border-bottom: 1px solid #4e4e4e; }
 #content .con .tit{display: inline-block;font-size:50px; font-family: 'Gothic A1', sans-serif; font-weight: 700; border-bottom:8px solid #fff;}
 /*#content .con .tit:hover{border-bottom: 8px solid #DF0029}*/
-#content .con .desc{font-family: 'Gothic A1', sans-serif; font-weight: 400;  padding-top:20px; text-align: justify; }
+#content .con .desc{font-family: 'Gothic A1', sans-serif; font-weight: 400;  padding-top:20px; text-align: justify;border-bottom: 1px solid transparant; line-height:1.5}
 #content .con .desc:hover{border-bottom: 1px solid #DF0029; transition:all 0.3s}
 #content .con .desc_list {padding-top:30px;}
 #content .con .desc_list > li {width:20%; float: left;}
