--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 
 
 #sec2 .project_list{width:100%; text-align:center; height:100%;}
-#sec2 .project_list li{display: inline-block; padding:2%;}
+#sec2 .project_list li{display: inline-block; padding:2%; overflow: hidden;}
 #sec2 .project_list li a{display: inline-block; margin: 0 auto; width:400px; height:400px; border-radius: 50%; overflow: hidden; background-color:#ffdf69;box-shadow: 1px 5px 10px 1px rgba(20,20,20,0.5);}
 #sec2 .project_list li:hover a img{opacity:0.5; transform: scale(1.2); transition:all 0.5s; }
 
@@ -91,9 +91,7 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 @media (max-width:1024px) {
   body{overflow-x:hidden;}
   #header{width:100%; height:40px; border-bottom:1px solid #4e4e4e;}
-  #header .logo{osition: absolute;
-    left: 5%;
-    top: 0;}
+  #header .logo{position: absolute;left: 5%; top: 0; width:70%}
   #header #myMenu{padding:10px 0;}
   #header #myMenu > li{float:left; width:33%; padding:0; text-align: center;}
   .section{padding-left:0; width:100%}
