--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 #header .logo{position: absolute; bottom:20px; left:10%;}
 #header .logo{text-align: left;}
 #header li.active a{color:#fff; border-bottom: 1px solid #4e4e4e;}
-
+#header .link{position: absolute; bottom:20px; right:10%;}
 .section{padding-left:10%; width:90%; height:100%; overflow: hidden;}
 #sec1{padding-left:10%;text-align: center;background-color:#5E4B8B; color:#fff;}
 
