--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 #header .logo{position: absolute; bottom:20px; left:10%;}
 #header .logo{text-align: left;}
 #header li.active a{color:#fff; border-bottom: 1px solid #4e4e4e;}
-#header .link{position: absolute; bottom:20px; right:10%;}
+#header .link{position: absolute; bottom:20px; right:10%; z-index: 9999;}
 .section{padding-left:10%; width:90%; height:100%; overflow: hidden;}
 #sec1{padding-left:10%;text-align: center;background-color:#5E4B8B; color:#fff;}
 
@@ -23,7 +23,7 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 #sec1 .skill .pos{ overflow: hidden; width:100%;}
 #c {position: absolute; left: -25%; bottom:-180px; width:130%; }
 #sec1 .change_word{width:100%; text-align: center;}
-#sec1 .change_word li{display:block; width:50%; font-size:100px; opacity: 0; position: absolute; left:25%; top:44%; transition:all 0.1s; font-weight: 600;}
+#sec1 .change_word li{display:block; width:50%; font-size:100px; opacity: 0; position: absolute; left:25%; top:38%; transition:all 0.1s; font-weight: 600;}
 #sec1 .change_word li:nth-child(1){color:#FFDF69}
 #sec1 .change_word li:nth-child(2){color:#FF75A8}
 #sec1 .change_word li:nth-child(3){color:#73AEB9}
