--- a/css/main.css
+++ b/css/main.css
@@ -1,83 +1,94 @@
 html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow: hidden;}
 #fp-nav ul li{display: none;}
-#header{height:100%; position: absolute; left:0; top:0; width:10%; border-right:1px solid #4e4e4e; z-index: 10; background: #FFDF69; color:#4e4e4e;}
-#header #myMenu{width:100%; height:90%;padding:10px; }
-#header #myMenu > li{padding:5px}
+
+/*header*/
+#header{height:100%; position: absolute; left:0; top:0; width:10%; border-right:1px solid #4e4e4e; z-index: 10; background: #fff; color:#4e4e4e;}
+#header #myMenu{width:100%; padding:16px; box-sizing: border-box;}
+#header #myMenu > li{padding:8px}
 #header .logo{position: absolute; bottom:20px; left:10%;}
 #header .logo{text-align: left;}
-#header li.active a{color:#fff; border-bottom: 1px solid #4e4e4e;}
-.section{padding-left:10%; width:90%; height:100%; overflow: hidden;}
-#sec1{padding-left:10%;text-align: center;background-color:#5E4B8B; color:#fff;}
+#header li.active a{color:#202121; border-bottom: 1px solid #4e4e4e;}
+.section{padding-left:10%; width:90%; height:100%; overflow: hidden; position:relative;}
+#sec1{padding-left:10%;text-align: center;background-color:#fff; color:#202121; }
+#sec1 .stit{text-align: center; font-size:96px; font-weight:600;}
 
-#sec1 .stit{text-align: center; font-size:100px;}
-#sec1 .skill{position: absolute; bottom:10%; left:10%; width:90%;font-size:0; border-top:1px solid #fff; padding-top:20px; }
+.pos{position:absolute; bottom:0; left:10%; width:90%;}
+.pos > div{width:15%; display: inline-block; }
+.skill_1{height:240px; background:linear-gradient(to top,#fff, #efefef) 100%;}
+.skill_2{height:240px; background:linear-gradient(to top,#fff, #efefef);}
+.skill_3{height:320px; background:linear-gradient(to top,#fff, #efefef);}
+.skill_4{height:280px; background:linear-gradient(to top,#fff, #efefef);}
+.skill_5{height:240px; background:linear-gradient(to top,#fff, #efefef);}
+
+#sec1 .skill{position: absolute; bottom:0; left:10%; width:90%;font-size:0; border-top:1px solid #efefef; padding-top:20px; background:#fff; height:96px;}
 #sec1 .skill li{display: inline-block; width:15%; font-size:16px;}
 
-#sec1 .skill  .pos .chart {
-  display: block;
-  margin: 20px auto;
-  border: 1px solid #fff;
-  height: 1080px;
-}
-#sec1 .skill .pos{ overflow: hidden; width:100%;}
-#c {position: absolute; left: -25%; bottom:-180px; width:130%; }
 #sec1 .change_word{width:100%; text-align: center;}
 #sec1 .change_word li{display:block; width:50%; font-size:100px; opacity: 0; position: absolute; left:25%; top:43%; transition:all 0.1s; font-weight: 600;}
-#sec1 .change_word li:nth-child(1){color:#FFDF69}
-#sec1 .change_word li:nth-child(2){color:#FF75A8}
-#sec1 .change_word li:nth-child(3){color:#73AEB9}
-#sec1 .change_word li:nth-child(4){color:#E8E1D2}
-#sec1 .change_word li:nth-child(5){color:#F67534}
+#sec1 .change_word li:nth-child(1){color:#DC8665}
+#sec1 .change_word li:nth-child(2){color:#138085}
+#sec1 .change_word li:nth-child(3){color:#544667}
+#sec1 .change_word li:nth-child(4){color:#CE7672}
+#sec1 .change_word li:nth-child(5){color:#EEB462}
 #sec1 .change_word li.on{opacity: 1;}
-
 
 
 #sec2 .project_list{width:100%; text-align:center; height:100%;}
 #sec2 .project_list li{display: inline-block; padding:2%; overflow: hidden;}
-#sec2 .project_list li a{display: inline-block; margin: 0 auto; width:400px; height:400px; border-radius: 50%; overflow: hidden; background-color:#ffdf69;box-shadow: 1px 5px 10px 1px rgba(20,20,20,0.5);}
-#sec2 .project_list li:hover a img{opacity:0.5; transform: scale(1.2); transition:all 0.5s; }
+#sec2 .project_list li a{display: inline-block; margin: 0 auto; width:400px; height:400px; border-radius: 50%; overflow: hidden; background-color:#efefef;box-shadow: 1px 5px 10px 1px rgba(20,20,20,0.5);}
+#sec2 .project_list li a img{transition: all 0.5s;}
+#sec2 .project_list li:hover a img{opacity:0.5; transform: scale(1.1); transition:all 0.5s; }
 
-/*첫번째거 설명*/
-#content{position: absolute; left:10%; padding-top:5%; width:100%; background-color:#fff;}
-#content .con{padding-left: 4%; padding-bottom:5%; color:#4e4e4e;font-size: 16px; border-bottom: 1px solid #4e4e4e; }
+/*con setting*/
+#content{margin-left:10%;width:90%; background-color:#fff;}
+#content .con{padding:4% 5%; height:30vh; color:#4e4e4e;font-size: 16px; border-bottom: 1px solid #4e4e4e; box-sizing: border-box}
 #content .con .tit{display: inline-block;font-size:50px; font-family: 'Gothic A1', sans-serif; font-weight: 700; border-bottom:8px solid #fff;}
-/*#content .con .tit:hover{border-bottom: 8px solid #DF0029}*/
 #content .con .desc{font-family: 'Gothic A1', sans-serif; font-weight: 400;  padding-top:20px; text-align: justify;border-bottom: 1px solid transparent; line-height:1.5}
 #content .con .desc:hover{border-bottom: 1px solid #DF0029; transition:all 0.3s}
-#content .con .desc_list {padding-top:30px;}
-#content .con .desc_list > li {width:20%; float: left;}
+#content .con .desc_list {padding-top:24px; display: flex; width:100%;}
+#content .con .desc_list > li {flex:1}
 #content .con .desc_list > li .stit{font-weight: 700; }
 #content .con .desc_list > li .sdesc{padding:15px 0 10px; }
 #content .con .desc_list > li .core{height:10px; background-color:#EC870C;}
 #content .con .desc_list > li .point{ height:10px; background-color:#DF0029;}
 #content .con .desc_list > li .sub{ height:10px; background-color:#b6b6b6;}
 #content .con .desc_list > li .color > li{ width:25%; float: left;}
-#content .img img{width:90%;}
-/*두번째거 설명*/
+
+#content .img{width:100%; height:70vh}
+#content .img.nong{background:url(/images/OT130Y1.png) 60% 0 no-repeat; background-size:80%;}
+#content .img.quiz{background:url(/images/iPhone%206%20Designer%20Desk.png) no-repeat; background-size:100%;}
+#content .img.us{background:url(/images/us.jpg) no-repeat; background-size:100%;}
+#content .img.repure{background:url(/images/mockup.png) 0 no-repeat; background-size:100%;}
+#content .img.keto{background:url(/images/macbook2.jpg) no-repeat; background-size:cover;}
+#content .img.pet{background:url(/images/pet.png) no-repeat; background-size:80%;}
+
+
+
+/*con1*/
 #content .con1 .tit:hover{border-bottom: 8px solid #c2252b}
 #content .con1 .desc_list > li .core{height:10px; background-color:#c2252b;}
 #content .con1 .desc_list > li .point{ height:10px; background-color:#637d36;}
 #content .con1 .desc_list > li .sub{ height:10px; background-color:#f8e5c3;}
 
-/*세번째거 설명*/
+/*con2*/
 #content .con2 .tit:hover{border-bottom: 8px solid #D2876E}
 #content .con2 .desc_list > li .core{height:10px; background-color:#D2876E;}
 #content .con2 .desc_list > li .point{ height:10px; background-color:#E16810;}
 #content .con2 .desc_list > li .sub{ height:10px; background-color:#757575;}
 
-/*네번째거 설명*/
+/*con3*/
 #content .con3 .tit:hover{border-bottom: 8px solid #0793CF}
 #content .con3 .desc_list > li .core{height:10px; background-color:#313579;}
 #content .con3 .desc_list > li .point{ height:10px; background-color:#CC112C;}
 #content .con3 .desc_list > li .sub{ height:10px; background-color:#6AC3E7;}
 
-/*다섯번째거 설명*/
+/*con4*/
 #content .con4 .tit:hover{border-bottom: 8px solid #f6c8c8}
 #content .con4 .desc_list > li .core{height:10px; background-color:#3a3d88;}
 #content .con4 .desc_list > li .point{ height:10px; background-color:#ff6161;}
 #content .con4 .desc_list > li .sub{ height:10px; background-color:#ffdb30;}
 
-#sec2{height:100%;width:100%; background: #FFDF69;}
+#sec2{height:100%;width:100%; background: #efefef;}
 #sec3{height:100%;width:100%; background: #73AEB9;}
 #sec3 .profile{position: absolute;top:30%; width:90%; text-align: center;}
 #sec3 .profile img{width:13%; padding-bottom: 20px;}
@@ -88,25 +99,25 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 
 /*미디어쿼리*/
 @media (max-width:1024px) {
-  body{overflow-x:hidden;}
-  #header{width:100%; height:40px; border-bottom:1px solid #4e4e4e;}
-  #header .logo{position: absolute;left: 5%; top: 0; width:70%}
-  #header #myMenu{padding:10px 0;}
-  #header #myMenu > li{float:left; width:33%; padding:0; text-align: center;}
-  .section{padding-left:0; width:100%}
-  .skill{display:none;}
-  #sec1{padding-left:0; background:#000;}
-  #sec2{background:#efefef;}
-  #sec2 .project_list li a{width:300px; height:300px;}
-  #sec3 .profile{width:100%; top:40%}
-  #content{width:90%; left:5%}
-  #content .con{padding-left:0; padding-top:25%;}
-  #content .con .tit{font-size:40px;}
-  #content .con .desc_list > li{width:100%; padding:20px 0;}
-  #content .con{border:none;}
-  .color{padding-left:5%}
-  #content .con .desc_list > li .stit{border-bottom:1px solid #999; padding-bottom:10px;}
-  #content .img img{    width: 150%;
+ body{overflow-x:hidden;}
+ #header{width:100%; height:40px; border-bottom:1px solid #4e4e4e; border-right:none;}
+ #header .logo{position: absolute;left: 5%; top: 0; width:70%}
+ #header #myMenu{padding:16px;}
+ #header #myMenu > li{float:left; width:33%; padding:0; text-align: center;}
+ .section{padding-left:0; width:100%}
+ .skill{display:none;}
+ #sec1{padding-left:0; background:#fff;}
+ #sec2{background:#efefef;}
+ #sec2 .project_list li a{width:300px; height:300px;}
+ #sec3 .profile{width:100%; top:40%}
+ #content{margin:0 auto; width:90%;}
+ #content .con{padding:56px 0 0 0; border:none;}
+ #content .con .tit{font-size:40px;}
+ #content .con .desc_list > li{width:100%; padding:20px 0;}
+
+ .color{padding-left:5%}
+ #content .con .desc_list > li .stit{border-bottom:1px solid #999; padding-bottom:10px;}
+ #content .img img{    width: 150%;
     transform: translateX(-20%);}
 
 }
