--- a/css/main.css
+++ b/css/main.css
@@ -50,9 +50,10 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 #content .con .desc_list > li .stit{font-weight: 700; }
 #content .con .desc_list > li .sdesc{padding:15px 0 10px; }
 #content .con .desc_list > li .core{height:10px; background-color:#EC870C;}
-#content .con .desc_list > li .point{ height:10px; background-color:#DF0029;}
-#content .con .desc_list > li .sub{ height:10px; background-color:#b6b6b6;}
-#content .con .desc_list > li .color > li{ width:25%; float: left;}
+#content .con .desc_list > li .point{height:10px; background-color:#DF0029;}
+#content .con .desc_list > li .sub{height:10px; background-color:#b6b6b6;}
+#content .con .desc_list > li .color{display: flex}
+#content .con .desc_list > li .color > li {flex: 1;}
 
 #content .img{width:100%; height:70vh}
 #content .img.nong{background:url(/images/OT130Y1.png) 60% 0 no-repeat; background-size:80%;}
@@ -65,25 +66,21 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 
 
 /*con1*/
-#content .con1 .tit:hover{border-bottom: 8px solid #c2252b}
 #content .con1 .desc_list > li .core{height:10px; background-color:#c2252b;}
 #content .con1 .desc_list > li .point{ height:10px; background-color:#637d36;}
 #content .con1 .desc_list > li .sub{ height:10px; background-color:#f8e5c3;}
 
 /*con2*/
-#content .con2 .tit:hover{border-bottom: 8px solid #D2876E}
 #content .con2 .desc_list > li .core{height:10px; background-color:#D2876E;}
 #content .con2 .desc_list > li .point{ height:10px; background-color:#E16810;}
 #content .con2 .desc_list > li .sub{ height:10px; background-color:#757575;}
 
 /*con3*/
-#content .con3 .tit:hover{border-bottom: 8px solid #0793CF}
 #content .con3 .desc_list > li .core{height:10px; background-color:#313579;}
 #content .con3 .desc_list > li .point{ height:10px; background-color:#CC112C;}
 #content .con3 .desc_list > li .sub{ height:10px; background-color:#6AC3E7;}
 
 /*con4*/
-#content .con4 .tit:hover{border-bottom: 8px solid #f6c8c8}
 #content .con4 .desc_list > li .core{height:10px; background-color:#3a3d88;}
 #content .con4 .desc_list > li .point{ height:10px; background-color:#ff6161;}
 #content .con4 .desc_list > li .sub{ height:10px; background-color:#ffdb30;}
@@ -99,25 +96,25 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 
 /*미디어쿼리*/
 @media (max-width:1024px) {
- body{overflow-x:hidden;}
- #header{width:100%; height:40px; border-bottom:1px solid #4e4e4e; border-right:none;}
- #header .logo{position: absolute;left: 5%; top: 0; width:70%}
- #header #myMenu{padding:16px;}
- #header #myMenu > li{float:left; width:33%; padding:0; text-align: center;}
- .section{padding-left:0; width:100%}
- .skill{display:none;}
- #sec1{padding-left:0; background:#fff;}
- #sec2{background:#efefef;}
- #sec2 .project_list li a{width:300px; height:300px;}
- #sec3 .profile{width:100%; top:40%}
- #content{margin:0 auto; width:90%;}
- #content .con{padding:56px 0 0 0; border:none;}
- #content .con .tit{font-size:40px;}
- #content .con .desc_list > li{width:100%; padding:20px 0;}
+#header{width:100%; height:48px; border-bottom:1px solid #4e4e4e; border-right:none;}
+#header .logo{position: absolute;left: 5%; top: 12px; width:70%}
+#header #myMenu{padding:16px;}
+#header #myMenu > li{float:left; width:33%; padding:0; text-align: center;}
+.section{padding-left:0; width:100%}
+.skill{display:none;}
+#sec1{padding-left:0; background:#fff;}
+#sec2{background:#efefef;}
+#sec2 .project_list li a{width:300px; height:300px;}
+#sec3 .profile{width:100%; top:40%}
+#content{margin:0 auto; width:90%;}
+#content .con{padding:80px 0 0 0; border:none; height:auto;}
+#content .con .tit{font-size:40px;}
+#content .con .desc_list > li{width:100%; padding:20px 0;}
+#content .con .desc_list {display: block;}
+#content .con .desc_list > li {margin:24px 0;}
+    
 
- .color{padding-left:5%}
- #content .con .desc_list > li .stit{border-bottom:1px solid #999; padding-bottom:10px;}
- #content .img img{    width: 150%;
-    transform: translateX(-20%);}
+#content .con .desc_list > li .stit{border-bottom:1px solid #999; padding-bottom:10px;}
+#content .img img{    width: 150%;}
 
 }
