--- a/css/main.css
+++ b/css/main.css
@@ -56,12 +56,12 @@ html, body{font-family: 'Poppins', sans-serif; width:100%; height:100%; overflow
 #content .con .desc_list > li .color > li {flex: 1;}
 
 #content .img{width:100%; height:70vh}
-#content .img.nong{background:url(/images/OT130Y1.png) 60% 0 no-repeat; background-size:80%;}
-#content .img.quiz{background:url(/images/iPhone%206%20Designer%20Desk.png) no-repeat; background-size:100%;}
-#content .img.us{background:url(/images/us.jpg) no-repeat; background-size:100%;}
-#content .img.repure{background:url(/images/mockup.png) 0 no-repeat; background-size:100%;}
-#content .img.keto{background:url(/images/macbook2.jpg) no-repeat; background-size:cover;}
-#content .img.pet{background:url(/images/pet.png) no-repeat; background-size:80%;}
+#content .img.nong{background:url(../images/OT130Y1.png) 60% 0 no-repeat; background-size:80%;}
+#content .img.quiz{background:url(../images/iPhone%206%20Designer%20Desk.png) no-repeat; background-size:100%;}
+#content .img.us{background:url(../images/us.jpg) no-repeat; background-size:100%;}
+#content .img.repure{background:url(../images/mockup.png) 0 no-repeat; background-size:100%;}
+#content .img.keto{background:url(../images/macbook2.jpg) no-repeat; background-size:cover;}
+#content .img.pet{background:url(../images/pet.png) no-repeat; background-size:80%;}
 
 
 
