--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,11 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
 
 .pos{position:absolute; bottom:0; left:10%; width:90%;}
 .pos > div{width:15%; display: inline-block; }
-.skill_1{height:240px; background:linear-gradient(to top,#fff, #efefef) 100%;}
-.skill_2{height:240px; background:linear-gradient(to top,#fff, #efefef);}
-.skill_3{height:320px; background:linear-gradient(to top,#fff, #efefef);}
-.skill_4{height:280px; background:linear-gradient(to top,#fff, #efefef);}
-.skill_5{height:240px; background:linear-gradient(to top,#fff, #efefef);}
+.skill_1{height:240px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
+.skill_2{height:240px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
+.skill_3{height:320px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
+.skill_4{height:280px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
+.skill_5{height:240px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
 
 #sec1 .skill{position: absolute; bottom:0; left:10%; width:90%;font-size:0; border-top:1px solid #efefef; padding-top:20px; background:#fff; height:96px;}
 #sec1 .skill li{display: inline-block; width:15%; font-size:16px;}
