--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,12 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
 
 .pos{position:absolute; bottom:0; left:10%; width:90%;}
 .pos > div{width:15%; display: inline-block; }
-.skill_1{height:240px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
+.skill_1{height:240px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4)) 100%;}
 .skill_2{height:240px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
 .skill_3{height:320px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
 .skill_4{height:280px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
 .skill_5{height:240px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4));}
+.skill_6{height:120px; border-top:8px dotted #efefef;}
 
 #sec1 .skill{position: absolute; bottom:0; left:10%; width:90%;font-size:0; border-top:1px solid #efefef; padding-top:20px; background:#fff; height:96px;}
 #sec1 .skill li{display: inline-block; width:15%; font-size:16px;}
@@ -32,13 +33,18 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
 #sec1 .change_word li:nth-child(5){color:#EEB462}
 #sec1 .change_word li.on{opacity: 1;}
 
-
-#sec2 .project_list{width:100%; text-align:center; height:100%;}
-#sec2 .project_list li{display: inline-block; padding:2%; overflow: hidden;}
-#sec2 .project_list li a{display: inline-block; margin: 0 auto; width:400px; height:400px; border-radius: 50%; overflow: hidden; background-color:#efefef;box-shadow: 1px 5px 10px 1px rgba(20,20,20,0.5);}
-#sec2 .project_list li a img{transition: all 0.5s;}
-#sec2 .project_list li:hover a img{opacity:0.5; transform: scale(1.1); transition:all 0.5s; }
-
+#sec2 .project_list{width:85%; margin:80px auto;}
+#sec2 .project_list .context{width:100%; height:36%; background:#fff; position:absolute; z-index: 999; bottom:0; padding:24px; box-sizing: border-box; color:#202121;}
+#sec2 .project_list .context p{font-size:24px; font-weight:700; margin-bottom:8px;}
+#sec2 .project_list li{width:48%; max-width:400px; height:360px; border-radius:12px; overflow: hidden; position:relative; float:left; margin:12px 1%; transition:all 0.3s; background-size:100%;}
+#sec2 .project_list li:before{content:''; display: inline-block; width:100%; height:100%; background:rgba(0,0,0,0.4); position:absolute; left:0; top:0; z-index: 999;}
+#sec2 .project_list li:nth-child(1){background:url(../images/pro_some4.jpg) no-repeat;}
+#sec2 .project_list li:nth-child(2){background:url(../images/pro_some5.jpg) no-repeat;}
+#sec2 .project_list li:nth-child(3){background:url(../images/pro_some1.jpg) no-repeat;}
+#sec2 .project_list li:nth-child(4){background:url(../images/pro_some2.jpg) no-repeat;}
+#sec2 .project_list li:nth-child(5){background:url(../images/pro_some3.jpg) no-repeat;}
+#sec2 .project_list li:nth-child(6){background:url(../images/pro_some6.jpg) no-repeat;}
+#sec2 .project_list li:hover{background-size:120%;}
 /*con setting*/
 #content{margin-left:10%;width:90%; background-color:#fff;}
 #content .con{padding:4% 5%; height:30vh; color:#4e4e4e;font-size: 16px; border-bottom: 1px solid #4e4e4e; box-sizing: border-box}
@@ -52,7 +58,7 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
 #content .con .desc_list > li .core{height:10px; background-color:#EC870C;}
 #content .con .desc_list > li .point{height:10px; background-color:#DF0029;}
 #content .con .desc_list > li .sub{height:10px; background-color:#b6b6b6;}
-#content .con .desc_list > li .color{display: flex}
+#content .con .desc_list > li .color{display: flex; width:90%;}
 #content .con .desc_list > li .color > li {flex: 1;}
 
 #content .img{width:100%; height:70vh}
@@ -105,7 +111,7 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
     .skill{display:none;}
     #sec1{padding-left:0; background:#fff;}
     #sec2{background:#efefef;}
-    #sec2 .project_list li a{width:300px; height:300px;}
+    
     #sec3 .profile{width:100%; top:40%}
     #content{margin:0; width:100%;}
     #content .con{padding:80px 0 0 0; border:none; height:auto; width:90%; margin:0 auto;}
