--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
 #sec2 .project_list li:nth-child(4){background:url(../images/pro_some2.jpg) no-repeat;}
 #sec2 .project_list li:nth-child(5){background:url(../images/pro_some3.jpg) no-repeat;}
 #sec2 .project_list li:nth-child(6){background:url(../images/pro_some6.jpg) no-repeat;}
-#sec2 .project_list li:hover{background-size:120%;}
+
 /*con setting*/
 #content{margin-left:10%;width:90%; background-color:#fff;}
 #content .con{padding:4% 5%; height:30vh; color:#4e4e4e;font-size: 16px; border-bottom: 1px solid #4e4e4e; box-sizing: border-box}
@@ -111,7 +111,7 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
     .skill{display:none;}
     #sec1{padding-left:0; background:#fff;}
     #sec2{background:#efefef;}
-    
+    #sec2 .project_list li {width:100%; margin:2% 0;}
     #sec3 .profile{width:100%; top:40%}
     #content{margin:0; width:100%;}
     #content .con{padding:80px 0 0 0; border:none; height:auto; width:90%; margin:0 auto;}
