--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
     .skill{display:none;}
     #sec1{padding-left:0; background:#fff;}
     #sec2{background:#efefef;}
-    #sec2 .project_list li {width:100%; margin:2% 0;}
+    #sec2 .project_list li {width:100%; margin:2% 0; height:280px;}
     #sec3 .profile{width:100%; top:40%}
     #content{margin:0; width:100%;}
     #content .con{padding:80px 0 0 0; border:none; height:auto; width:90%; margin:0 auto;}
