--- a/css/main.css
+++ b/css/main.css
@@ -33,23 +33,24 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
 #sec1 .change_word li:nth-child(5){color:#EEB462}
 #sec1 .change_word li.on{opacity: 1;}
 
-#sec2 .project_list{width:85%; margin:80px auto;}
+#sec2 .project_list{max-width: 1280px;
+    width: 80%; margin:80px auto;}
 #sec2 .project_list .context{width:100%; height:36%; background:#fff; position:absolute; z-index: 999; bottom:0; padding:24px; box-sizing: border-box; color:#202121;}
 #sec2 .project_list .context p{font-size:24px; font-weight:700; margin-bottom:8px;}
-#sec2 .project_list li{width:48%; max-width:400px; height:360px; border-radius:12px; overflow: hidden; position:relative; float:left; margin:12px 1%; transition:all 0.3s; background-size:100%;}
+#sec2 .project_list li{width:48%; max-width:400px; height:360px; border-radius:12px; overflow: hidden; position:relative; float:left; margin:12px 1%; cursor:pointer;}
 #sec2 .project_list li:before{content:''; display: inline-block; width:100%; height:100%; background:rgba(0,0,0,0.4); position:absolute; left:0; top:0; z-index: 999;}
-#sec2 .project_list li:nth-child(1){background:url(../images/pro_some4.jpg) no-repeat;}
-#sec2 .project_list li:nth-child(2){background:url(../images/pro_some5.jpg) no-repeat;}
-#sec2 .project_list li:nth-child(3){background:url(../images/pro_some1.jpg) no-repeat;}
-#sec2 .project_list li:nth-child(4){background:url(../images/pro_some2.jpg) no-repeat;}
-#sec2 .project_list li:nth-child(5){background:url(../images/pro_some3.jpg) no-repeat;}
-#sec2 .project_list li:nth-child(6){background:url(../images/pro_some6.jpg) no-repeat;}
+#sec2 .project_list li:nth-child(1){background:url(../images/pro_some4.jpg) no-repeat; background-size:100%;}
+#sec2 .project_list li:nth-child(2){background:url(../images/pro_some5.jpg) no-repeat; background-size:100%;}
+#sec2 .project_list li:nth-child(3){background:url(../images/pro_some1.jpg) no-repeat; background-size:100%;}
+#sec2 .project_list li:nth-child(4){background:url(../images/pro_some2.jpg) no-repeat; background-size:100%;}
+#sec2 .project_list li:nth-child(5){background:url(../images/pro_some3.jpg) no-repeat; background-size:100%;}
+#sec2 .project_list li:nth-child(6){background:url(../images/pro_some6.jpg) no-repeat; background-size:100%;}
 
 /*con setting*/
 #content{margin-left:10%;width:90%; background-color:#fff;}
 #content .con{padding:4% 5%; height:30vh; color:#4e4e4e;font-size: 16px; border-bottom: 1px solid #4e4e4e; box-sizing: border-box}
-#content .con .tit{display: inline-block;font-size:50px; font-family: 'Gothic A1', sans-serif; font-weight: 700; border-bottom:8px solid #fff;}
-#content .con .desc{font-family: 'Gothic A1', sans-serif; font-weight: 400;  padding-top:20px; text-align: justify;border-bottom: 1px solid transparent; line-height:1.5}
+#content .con .tit{display: inline-block;font-size:50px; font-weight: 700; border-bottom:8px solid #fff;}
+#content .con .desc{font-weight: 400;  padding-top:20px; text-align: justify;border-bottom: 1px solid transparent; line-height:1.5}
 #content .con .desc:hover{border-bottom: 1px solid #DF0029; transition:all 0.3s}
 #content .con .desc_list {padding-top:24px; display: flex; width:100%;}
 #content .con .desc_list > li {flex:1}
@@ -111,7 +112,7 @@ html, body{font-family: 'Noto Sans KR', sans-serif; width:100%; height:100%; ove
     .skill{display:none;}
     #sec1{padding-left:0; background:#fff;}
     #sec2{background:#efefef;}
-    #sec2 .project_list li {width:100%; margin:2% 0; height:280px;}
+    #sec2 .project_list li {width:100%; margin:2% 0;}
     #sec3 .profile{width:100%; top:40%}
     #content{margin:0; width:100%;}
     #content .con{padding:80px 0 0 0; border:none; height:auto; width:90%; margin:0 auto;}
