--- a/css/common.css
+++ b/css/common.css
@@ -13,15 +13,17 @@
 	display: none
 }
 
-body {
-  margin: 0;
-  overflow: hidden;
-
-  font-size: 14px;
-  color:#ccc; 
+html, body {
+    margin: 0;
+    font-size: 14px;
+    color:#ccc; 
+    font-family: 'Noto Sans KR', sans-serif;
+    width:100%;
+    height:100%;
+    overflow: hidden;
 }
 
-
+.section{padding-left:10%; width:90%; height:100%; overflow: hidden; position:relative;}
 
 
 
@@ -29,6 +31,12 @@ body {
 
 /*** header ***/
 
+#header{height:100%; position: absolute; left:0; top:0; width:10%; border-right:1px solid #4e4e4e; z-index: 10; background: #fff; color:#4e4e4e;}
+#header #myMenu{width:100%; padding:16px; box-sizing: border-box;}
+#header #myMenu > li{padding:8px}
+#header .logo{position: absolute; bottom:20px; left:10%;}
+#header .logo{text-align: left;}
+#header li.active a{color:#202121; border-bottom: 1px solid #4e4e4e;}
 
 
 /*** footer ***/
