--- a/css/common.css
+++ b/css/common.css
@@ -20,18 +20,17 @@ html, body {
     font-family: 'Noto Sans KR', sans-serif;
     width:100%;
     height:100%;
-    overflow: hidden;
 }
 
-.section{padding-left:10%; width:90%; height:100%; overflow: hidden; position:relative;}
-
+.section{padding-left:10%; width:100%; overflow: hidden; position:relative; box-sizing: border-box;}
+.con_wrap{width:80%; margin:0 auto; max-width:1280px;}
 
 
 
 
 /*** header ***/
 
-#header{height:100%; position: absolute; left:0; top:0; width:10%; border-right:1px solid #4e4e4e; z-index: 10; background: #fff; color:#4e4e4e;}
+#header{height:100%; position: fixed; left:0; top:0; width:10%; border-right:1px solid #4e4e4e; z-index: 10; background: #fff; color:#4e4e4e; z-index: 9999;}
 #header #myMenu{width:100%; padding:16px; box-sizing: border-box;}
 #header #myMenu > li{padding:8px}
 #header .logo{position: absolute; bottom:20px; left:10%;}
